--- a/src/pagesComponent/Home.css
+++ b/src/pagesComponent/Home.css
@@ -481,7 +481,7 @@
   .read-more-btn {
     background: none;
     border: none;
-    color: #007bff;
+    color: #fff;
     font-weight: bold;
     cursor: pointer;
     margin-left: 5px;
@@ -557,7 +557,7 @@
   
   /*  */
   .step-inline {
-    gap: 10px;
+    gap: 5px;
   }
   
   .step-circle {
