--- a/src/pagesComponent/About.css
+++ b/src/pagesComponent/About.css
@@ -30,13 +30,18 @@
     .about-text{
         margin-right: 0rem !important;
     }
+
+    .team-section-top-mobile{
+      padding-top: 2rem !important;
+      padding-bottom: 2rem !important;
+    }
   }
 
   /* Team section */
   
   .team-card {
     border: none;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     overflow: hidden;
     transition: transform 0.3s ease;
   }
@@ -52,7 +57,7 @@
   }
   
   .card-body {
-    padding: 1rem 1.2rem;
+    padding: 1.5rem 1.2rem;
   }
   
   .about-gray-color-div {
@@ -116,13 +121,13 @@
    .gallery-item {
     overflow: hidden;
     position: relative;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
   }
   
   .gallery-item img {
     transition: transform 0.4s ease;
-    border-radius: 10px;
+    /* border-radius: 10px; */
   }
   
   .gallery-item:hover img {
@@ -141,7 +146,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    /* border-radius: 10px; */
   }
   
   .gallery-item:hover .overlay {
@@ -162,7 +167,7 @@
   .gallery-item {
     overflow: hidden;
     position: relative;
-    border-radius: 10px;
+    /* border-radius: 10px; */
   }
   
   .gallery-item img {
@@ -185,7 +190,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    /* border-radius: 10px; */
   }
   
   .gallery-item:hover .overlay {
