--- a/src/pagesComponent/ProjectDetails.css
+++ b/src/pagesComponent/ProjectDetails.css
@@ -77,3 +77,21 @@
   .read-more-project-details:focus{
     box-shadow: none;
   }
+  
+
+  .horizontal-gallery-wrapper {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    display: flex;
+    gap: 0px; /* Adds gap between images */
+    padding-bottom: 1rem;
+  }
+  
+  .gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px; /* Optional: rounded corners for images */
+  }
+  
+  
