--- a/src/pagesComponent/ProjectsPage.css
+++ b/src/pagesComponent/ProjectsPage.css
@@ -16,16 +16,29 @@
 
 .projectpage_img {
     width: 100%;
-    aspect-ratio: 836 / 1022;
+    /* aspect-ratio: 836 / 1022; */
+    aspect-ratio: 836 / 980;
     /* object-fit: cover; */
-    border-radius: 12px;
+    /* border-radius: 12px; */
     display: block;
 }
 
 .show-more-less-more-btn{
   font-weight: bold;
   font-size: 1.4rem;
+  border-bottom: 1px solid #000;
+  padding: 0.3rem 0.1rem;
+  border-radius: 0%;
 }
 .show-more-less-more-btn:focus{
   box-shadow: none;
+}
+
+@media (min-width: 765px) {
+
+  .project-page-set{
+    padding-left: 6%;
+    padding-right: 5%;
+  }
+
 }
