--- a/src/layoutComponent/Navbar.css
+++ b/src/layoutComponent/Navbar.css
@@ -69,6 +69,17 @@
   min-width: 100%;
 }
 
+@media (max-width: 570px) {
+  .footer-title {
+    margin-bottom: 0.6rem !important;
+  }
+
+  .footer-mobile-hr-line{
+    margin-top: 0.5rem !important;
+    margin-bottom: 0.5rem !important;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 980px) {
   .nav-item-project-custom {
     width: 121px;
