--- a/src/pagesComponent/Career.css
+++ b/src/pagesComponent/Career.css
@@ -137,3 +137,16 @@ text-align: justify;
     color: #fff !important;
     border: none !important;
 }
+
+@media (min-width: 768px) {
+  .career-subpara{
+    font-size: 19px;
+  }
+
+  .core-values-section-img5{
+    margin-top: -1rem;
+  }
+  .core-values-section-img4{
+    margin-top: -0.5rem;
+  }
+}
