--- a/src/pagesComponent/Home.css
+++ b/src/pagesComponent/Home.css
@@ -159,7 +159,7 @@
   
   }
 
-  @media (min-width: 765px) {
+  @media (min-width: 765px) and (max-width: 1598px) {
     .set-home-page-projects-row{
       padding-left: 7%;
       padding-right: 7%;
@@ -168,6 +168,20 @@
       padding-left: 3%;
       padding-right: 3%;
     }
+  }
+
+  @media (min-width: 1599px) and (max-width: 1600px) {
+    .set-home-page-projects-row{
+      padding-left: 4%;
+      padding-right: 4%;
+    }
+    .set-home-page-projects{
+      padding-left: 1%;
+      padding-right: 1%;
+    }
+  }
+
+  @media (min-width: 765px) {
 
     .project-title {
       margin-left: 2.6rem !important;
