--- a/src/pagesComponent/About.css
+++ b/src/pagesComponent/About.css
@@ -244,10 +244,12 @@
   video {
     -webkit-appearance: none;
     appearance: none;
-    pointer-events: none;
-    user-select: none;
     object-fit: cover;
+    width: 100%;
+    height: 100%;
+    display: block;
   }
+  
   .career-banner-video, .loader-video {
     object-fit: cover;
     width: 100%;
@@ -255,8 +257,8 @@
   }
   .career-banner-video {
     object-fit: cover;
-    pointer-events: none;
-    user-select: none;
+    /* pointer-events: none; */
+    /* user-select: none; */
     -webkit-appearance: none;
     appearance: none;
   }
